--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     const resultDiv = document.getElementById('result');
 
     // Change this to your deployed backend API
-    const bypassApiUrl = 'https://your-project.vercel.app/api/bypass';
+    const bypassApiUrl = 'https://ne-xbypass-xyz.vercel.app/api/bypass';
 
     bypassBtn.addEventListener('click', async () => {
       const apiKey = apiKeyInput.value.trim();
