--- a/succsess.html
+++ b/succsess.html
@@ -48,7 +48,7 @@
 </head>
 <body>
   <h1>API Key</h1>
-  <div id="apiKey" title="Click to copy API key">YOUR-STATIC-API-KEY-1234567890</div>
+  <div id="apiKey" title="Click to copy API key">UY-MM_X193173627293V</div>
   <div id="copyMsg"></div>
 
   <script>
